--- a/package.json
+++ b/package.json
@@ -9,18 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.20.0",
+    "@vercel/postgres": "^0.10.0",
+    "lucide-react": "^0.447.0",
+    "microcms-js-sdk": "^3.1.2",
+    "next": "14.2.14",
+    "next-auth": "^4.24.8",
+    "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.14"
+    "react-spinners": "^0.14.1",
+    "stripe": "^17.2.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.14"
+    "eslint-config-next": "14.2.14",
+    "postcss": "^8",
+    "prisma": "^5.20.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
